[package]
name = "stm32f4_adc"
version = "0.1.0"
authors = ["Rihab JOUINI <rihab.jouini@mobile-devices.fr>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
stm32f4xx-hal =  { version = "0.8.3", features = ["stm32f412"]}
fmt = "0.1.0"
embedded-hal = "0.2" #a multi device hardware abstraction on top of the peripheral access API for the STMicro STM32F4 series microcontrollers.
nb = "0.1.2" #Minimal non-blocking I/O layer
cortex-m = "0.6"
cortex-m-rt = "0.6"
panic-halt = "0.2.0" #Set the panicking behavior to halt,
cortex-m-semihosting = "0.3.5"
panic-semihosting = "0.5.3"

[dev-dependencies]
cortex-m-semihosting = "0.3.3"
panic-semihosting = "0.5.3"
embedded-graphics = "0.6.2"
bare-metal = "0.2.5"
stm32f4 = "0.11.0"

[profile.release]
codegen-units = 1
debug = true
lto = true
opt-level = "s" #optimising the size when compiling 

